--- a/examples/style.css
+++ b/examples/style.css
@@ -18,6 +18,10 @@
     content: '';
 }
 
+h1 {
+    font-family: Helvetica, Arial, sans-serif;
+}
+
 .box {
     box-sizing: border-box;
     float: left;
