--- a/examples/style.css
+++ b/examples/style.css
@@ -31,6 +31,10 @@ h1 {
     border: 1px solid #666666;
 }
 
+.hide {
+    display: none;
+}
+
 /* Desktop First for IE testing */
 
 @media screen and ( max-width: 479px ) {
